--- a/wesurve/src/main/webapp/WEB-INF/web.xml
+++ b/wesurve/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
     <servlet-mapping>
         <servlet-name>spring-mvc</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
     
     <context-param>
