--- a/wesurve/src/main/resources/dbconfig.properties
+++ b/wesurve/src/main/resources/dbconfig.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/survey_feedback_db
+jdbc.url = jdbc:mysql://172.16.33.118:3306/survey_feedback_db
 jdbc.username = root
 jdbc.password = root
 
