--- a/survay-feedback/package.json
+++ b/survay-feedback/package.json
@@ -25,10 +25,19 @@
     "@angular/router": "^4.2.4",
     "@material/form-field": "^0.23.0",
     "@material/textfield": "^0.23.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular-2-data-table": "^0.1.2",
     "angular2-social-login": "^3.1.1",
+    "angular4-social-login": "^1.0.13",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-order-pipe": "^0.1.5",
+    "ngx-clipboard": "^8.1.1",
+    "ngx-embed-video": "^0.1.8",
     "ngx-facebook": "^2.4.0",
+    "ngx-filter-pipe": "^1.0.0",
+    "ngx-pagination": "^3.0.3",
+    "ngx-tooltip": "0.0.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -48,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-youtube-player": "0.0.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
