--- a/survay-feedback/package.json
+++ b/survay-feedback/package.json
@@ -27,6 +27,7 @@
     "@material/textfield": "^0.23.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-2-data-table": "^0.1.2",
+    "angular-froala-wysiwyg": "^2.7.1",
     "angular2-social-login": "^3.1.1",
     "angular4-social-login": "^1.0.13",
     "core-js": "^2.4.1",
