--- a/wesurve/src/main/webapp/WEB-INF/web.xml
+++ b/wesurve/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE xml>
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
     <servlet>
