--- a/survay-feedback/package.json
+++ b/survay-feedback/package.json
@@ -28,16 +28,22 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-2-data-table": "^0.1.2",
     "angular-froala-wysiwyg": "^2.7.1",
+    "angular2-busy": "^2.0.4",
     "angular2-social-login": "^3.1.1",
     "angular4-social-login": "^1.0.13",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng-sidebar": "^6.0.4",
+    "ng2-charts": "^1.6.0",
     "ng2-order-pipe": "^0.1.5",
+    "ng2-social-share": "0.0.10",
     "ngx-clipboard": "^8.1.1",
     "ngx-embed-video": "^0.1.8",
     "ngx-facebook": "^2.4.0",
     "ngx-filter-pipe": "^1.0.0",
     "ngx-pagination": "^3.0.3",
+    "ngx-sharebuttons": "^4.1.4",
     "ngx-tooltip": "0.0.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
