--- a/survay-feedback/package.json
+++ b/survay-feedback/package.json
@@ -34,6 +34,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
     "ng-sidebar": "^6.0.4",
     "ng2-charts": "^1.6.0",
     "ng2-order-pipe": "^0.1.5",
@@ -54,6 +55,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
